--- a/package.json
+++ b/package.json
@@ -11,15 +11,18 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@trendyol-js/react-carousel": "^3.0.2",
     "bootstrap": "^5.2.1",
     "canvas-confetti": "^1.6.0",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
+    "react-carousel-minimal": "^1.4.1",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
     "react-select": "^5.4.0",
+    "react-toastify": "^9.1.1",
     "sass": "^1.54.5",
     "web-vitals": "^2.1.4"
   },
